migrated to java11 and returning top scores sorted