@@ -19,41 +19,41 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @CrossOrigin("*")
 @RestController
 public class MainController {
-    @Bean
-    public WebMvcConfigurer corsConfigurer() {
-        return new WebMvcConfigurerAdapter() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/**").allowedOrigins("*");
-            }
-        };
-    }
-//	Jwt jwt = new Jwt("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9" + ".eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ" + ".SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c");
+	@Autowired
+	UserRepository userRepo;
+	//	Jwt jwt = new Jwt("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9" + ".eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ" + ".SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c");
 //	String username = "miguel";
 	//	String password = "hashed";
 //	String password = "U2FsdGVkX18HYydxWuCFBLslkZn2a8R51JgWX4TN2cXahyugFL74IUz5" +
 //			"+0a9O8neHKxaWz7Vj9mWrSqJFxX1uLrEcI4FlTbcCfEdq9GdBNL5sXxpq" +
 //			"+1BzLMwkrR+u3RktcKTLZJUaos9f3j2xVq8oA==";
 //	String password = "b390264a923529cdd2012d033c790ea522effb9b15d7800d3db41effe58fd346";
-
-	@Autowired
-	UserRepository userRepo;
 	@Autowired
 	UserDetailsService userDetailsService;
-
 	@Autowired
 	JwtUtil jwtUtil;
 	@Autowired
 	ScoreRepository scoreRepo;
-
 	ObjectMapper mapper = new ObjectMapper();
+
+	@Bean
+	public WebMvcConfigurer corsConfigurer() {
+		return new WebMvcConfigurerAdapter() {
+			@Override
+			public void addCorsMappings(CorsRegistry registry) {
+				registry.addMapping("/**").allowedOrigins("*");
+			}
+		};
+	}
 
 //	@CrossOrigin("*")
 //	@PostMapping("/login")
@@ -86,7 +86,7 @@ public class MainController {
 		ArrayList<Score> scores = new ArrayList<>();
 		if ((null != user.username) && (null != user.password)) {
 			if (userRepo.findByUsername(user.username).isPresent()) {
-				return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Username "+user.username+" already exists");
+				return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Username " + user.username + " already exists");
 			}
 			userRepo.save(new User(user.username, user.password, scores));
 			JwtRequest forNewUser = new JwtRequest(user.username, user.password);
@@ -109,7 +109,9 @@ public class MainController {
 		String jwtHeader = headers.split(" ")[1];
 		System.out.println("jwtHeader = " + jwtHeader);
 //		if (jwtHeader.equals(this.jwt.jwt)) {
-		List<Score> byUsername = scoreRepo.findByUsername(username).stream().filter(score -> score.difficulty.equals(level)).toList();
+		List<Score> byUsername = scoreRepo.findByUsername(username).stream()
+		                                  .filter(score -> score.difficulty.equals(level))
+		                                  .collect(Collectors.toList());
 //			byUsername.forEach(score -> {
 //				System.out.println("score.scoreValue = " + score.scoreValue);
 //
@@ -125,7 +127,11 @@ public class MainController {
 	@GetMapping("/highscores/{level}")
 	ResponseEntity<?> highscore(@PathVariable String level) throws JsonProcessingException {
 		// nothing needed
-		List<Score> scores = scoreRepo.findAll().stream().filter(score -> score.difficulty.equals(level)).toList();
+		List<Score> scores = scoreRepo.findAll().stream()
+		                              .filter(score -> score.difficulty.equals(level))
+                                  .sorted(Score::compareTo)
+                                  .limit(10)
+                                  .collect(Collectors.toList());
 		return ResponseEntity.status(HttpStatus.OK).body(mapper.writeValueAsString(scores));
 	}
 
@@ -137,7 +143,7 @@ public class MainController {
 		String jwtHeader = headers.split(" ")[1];
 		System.out.println("jwtHeader = " + jwtHeader);
 //		if (jwtHeader.equals(this.jwt.jwt)) {
-		System.out.println("score = " + score.difficulty);
+//		System.out.println("score = " + score.difficulty);
 		if (null != score) {
 			System.out.println("score.username = " + score.username);
 			Optional<User> byUsername = userRepo.findByUsername(score.username);
